[gd_scene load_steps=4 format=2]

[ext_resource path="res://World/WallSegment.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true

[node name="WallSegment" type="StaticBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpawnDisableArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="SpawnDisableCollisionArea" type="CollisionShape2D" parent="SpawnDisableArea"]
self_modulate = Color( 1, 0, 0, 1 )
show_behind_parent = true
shape = SubResource( 2 )

[connection signal="body_entered" from="SpawnDisableArea" to="." method="_on_SpawnDisableArea_body_entered"]
[connection signal="body_exited" from="SpawnDisableArea" to="." method="_on_SpawnDisableArea_body_exited"]
